--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
       	text-align: left;
       }
 
+      button {
+      	background-color: #cf0053;
+      	color:yellow;
+      }
+
 	</style>
 
 </head>
 <body>
 
-	 <div class="img-container"> <!-- Block parent element -->
-
+	 <div class="img-container">
 	<h1 class="text-center">Welcome to Shop Style</h1>
 	<p> To our Dear Customers, Thank you for choosing to visit our website, Shop Style. Our shop offers a few clothings so please enjoy your shopping. </p>
 	
