--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Shop Style</title>
+	<title>Portfolio</title>
 
-	<style>
+		<style>
 		body{
 	font-family: 'Raleway', sans-serif;
 }
@@ -48,49 +48,24 @@
 	padding: 25px;
 }
 
-section {
-	text-align: left;
-}
-
 h1{
-	text-align: left;
-}
-
-img{
-
-	width: 300px;
-}
-
-	.img-container {
-        text-align: center;
-      }
-
-      .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-p{
-	background: black;
-	color: white;
-}
-
-h1{
+	color: purple;
 	text-align: center;
 }
 
-
-
+p{
+	color: brown;
+}
 </style>
 
 </head>
 <body>
 
+	<h1><a href="portfolio.html"></a></h1>
+
 	<div id="nav">
 		<h1><a href="index.html">Shop Style</a></h1>
 		<ul>
-
 			<li><a href="signup.html">Sign Up</a></li>
 			<li><a href="aboutus.html">About Us</a></li>
 			<li><a href="products.html">Products</a></li>
@@ -101,51 +76,39 @@ h1{
 
 	</div>
 
-<div>
-	<h1> Welcome To Shop Style! </h1>
-</div>
+	<div style="background: url(/assets/images/lavender.PNG);width:100%;height:900px;">
 
-<div style="background: url(/assets/images/lavender.PNG);width:100%;height:900px;">
 
-	<h2> Featured Products</h2>
-	<img src="/assets/images/crop top.png" alt="crop top" ₱99 class="center" >
-	
 	<div>
-
-		<center>Crop top ₱99</center>
+	
+	<h1> About Me</h1>
 
 </div>
 	
-	<div>
-	
-	<img src="/assets/images/dress.JPEG" alt="dress" class="center">
+	<h2>Name</h2>
+	<p> Mary Sophia Faith S. Baleares</p>
 
-</div>
-	
-	<div>
+	<h2>Age</h2>
+	<p> 19 </p>
 		
-		<center>Dress ₱150</center>
+	<h2>Birthday</h2>
+	<p> January 03, 2002 </p>
 
-	</div>
+	<h2>Favorite color</h2>
+	<p> Purple </p>
 	
-	<img src="/assets/images/shorts.JPEG" alt="shorts" ₱200 class="center">
-	
-	<div>
+	<h2>Schools</h2>
+	<p><li> Paco Citizen Academy Foundation (Pre-school to Senior high-school)</li></p>
+	<p><li>Centro Escolar University (Makati)</p></li>
 
-		<center>Shorts ₱200</center>
-	
-	</div>
+	<h2>Interests and Hobbies</h2>
+	<p> <li> I like listening to music </li> </p>
+	<p> <li> I like Watching Kdramas </li> </p>
+	<p> <li> I love puppies </li> </p>
+
+</p>
 </div>
-
-	<a href="aboutus.html">About Us</a>
-	<a href="products.html">Products</a></li>
-	<a href="portfolio.html">Portfolio</a></li>
-
-
 
 
 </body>
 </html>
-
-
-
