--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Shop Style</title>
+	<title>Products</title>
 
 	<style>
 		body{
@@ -48,49 +48,24 @@
 	padding: 25px;
 }
 
-section {
-	text-align: left;
-}
-
-h1{
-	text-align: left;
-}
-
 img{
-
 	width: 300px;
 }
 
-	.img-container {
-        text-align: center;
-      }
-
-      .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-p{
-	background: black;
-	color: white;
-}
-
-h1{
+h2{
 	text-align: center;
 }
-
-
 
 </style>
 
 </head>
 <body>
 
+	<h1><a href="products.html"</a></h1>
+
 	<div id="nav">
 		<h1><a href="index.html">Shop Style</a></h1>
 		<ul>
-
 			<li><a href="signup.html">Sign Up</a></li>
 			<li><a href="aboutus.html">About Us</a></li>
 			<li><a href="products.html">Products</a></li>
@@ -98,16 +73,12 @@ h1{
 			<li><a href="mycart.html">My Cart</a></li>
 
 		</ul>
-
 	</div>
 
-<div>
-	<h1> Welcome To Shop Style! </h1>
-</div>
+	<div style="background: url(/assets/images/lavender.PNG);width:100%;height:1600px;">
 
-<div style="background: url(/assets/images/lavender.PNG);width:100%;height:900px;">
 
-	<h2> Featured Products</h2>
+	<h2>Products</h2>
 	<img src="/assets/images/crop top.png" alt="crop top" ₱99 class="center" >
 	
 	<div>
@@ -135,17 +106,22 @@ h1{
 		<center>Shorts ₱200</center>
 	
 	</div>
-</div>
 
-	<a href="aboutus.html">About Us</a>
-	<a href="products.html">Products</a></li>
-	<a href="portfolio.html">Portfolio</a></li>
+	<img src="/assets/images/pink shirt.JPEG" alt="shirt" ₱150 class="center">
+	
+	<div>
+		
+		<center>Pink Shirt ₱150</center>
 
+	</div>
 
+	<img src="/assets/images/skinny jeans.JPEG" alt="jeans" ₱350 class="center">
 
+	<div>
+
+		<center>Skinny Jeans ₱350</center>
+
+	</div>
 
 </body>
 </html>
-
-
-
